Add missing model-endpoint
